# chat-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/chat_bot/: __init__.py
