[project]
name = "chat-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "winnie279", email = "" }
]
dependencies = [
    "langchain>=0.0.310",
    "openai~=0.28.1",
    "unstructured>=0.10.19",
    "markdown>=3.5",
    "tiktoken>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
